# nim-miqt-kitchensink

./: .gitignore  .gitmodules
reference/button_sidebar/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  sidebarbutton.cpp
reference/mdi/: CMakeLists.txt  MdiApp.pro  main.cpp  mainwindow.cpp  mainwindow.h  mdichild.cpp
reference/simple_plugin/: CMakeLists.txt  README.md  build_and_run.sh  interface.h  simple_plugin.pro
reference/simple_plugin/host/: CMakeLists.txt  host.pro  main.cpp
reference/simple_plugin/plugin/: CMakeLists.txt  calculator_plugin.cpp  calculator_plugin.h  plugin.pro
reference/vbox_layout/: CMakeLists.txt  HBoxLayoutExample.pro  main.cpp  mainwindow.cpp  mainwindow.h
reference/vbox_layout_dynamic/: README.md  main.cpp  mainwindow.cpp  mainwindow.h
samples/button_sidebar/: main  main.nim  mainwindow.nim  sidebarbutton.nim
samples/mdi/: main.nim  mainwindow.nim  mdichild.nim
samples/simple/: logos.nim  main.nim
samples/simple_plugin/: build_and_run.sh  interface.nim
samples/simple_plugin/host/: main.nim
samples/simple_plugin/plugin/: calculator_plugin.nim
samples/vbox_layout/: main  main.nim  mainwindow.nim
samples/vbox_layout_dynamic/: README.md  main  main.nim  mainwindow.nim
